fixed front face visibility

--- a/style.css
+++ b/style.css
@@ -435,6 +435,7 @@ main {
     }
 
     .card-face.back {
+        backface-visibility: hidden;
         transform: rotateY(180deg);
     }
 
